Fix buttons align

--- a/src/app/styl/movie_detail.styl
+++ b/src/app/styl/movie_detail.styl
@@ -195,7 +195,7 @@
 
 .movie-btn
 	z-index 2
-	margin-left 15px
+	margin-right 15px
 	position relative
 	cursor pointer
 	float left
